# rusttracer

./: Cargo.toml  perf.data  perf.data.old  readme.md
src/: main.rs  materials.rs  primatives.rs  render_objects.rs
src/render_objects/: bvh.rs  hitable.rs  mod.rs
